# ML_telecom_customer_outflow

./: Dockerfile  README.md  pyproject.toml  requirements.txt  telecom_customer_outflow.ipynb
api/: main.py
api/model_store/: cat_model.pkl
api/src/: schemas.py
